Added test branch with test header in application file

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
   </head>
 
   <body>
+    <h1 class="text-center">Physicians And Mentors TEST VERSION!</h1>
     <%= yield %>
   </body>
 </html>
