added links so that navigation between pages is possible

--- a/app/views/mentor_portal/dashboard.html.erb
+++ b/app/views/mentor_portal/dashboard.html.erb
@@ -1,2 +1,7 @@
-<h1>Mentor and Physician Portal Dashboard</h1>
-<p>Welcome to the mentor portal!"</p>
+<h1>Mentor Portal Dashboard</h1>
+<p>Welcome to the mentor portal!</p>
+
+<ul>
+  <li><a href="<%= mentor_portal_messages_path %>">Messages</a></li>
+  <li><a href="<%= mentor_portal_posts_path %>">Posts</a></li>
+</ul>
