--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   </head>
 
   <body>
-    <h1 class="text-center">Book Collection Auth Testing</h1>
+    <h1 class="text-center">User Collection Auth Testing</h1>
     <%= yield %>
   </body>
 </html>
