--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -39,7 +39,7 @@
 
   <div class="field">
     <%= form.label :phone_number %>
-    <%= form.number_field :phone_number %>
+    <%= form.telephone_field :phone_number %>
   </div>
 
   <div class="field">
