Add search feature by first name for user

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,11 @@
 
 <p id="notice"><%= notice %></p>
 
+<form action="/users" method="GET">
+  <input type="text" name="search_name" >
+  <input type="submit" value="Search for Users by First Name">
+</form>
+
 <table>
   <thead>
     <tr>
