--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,49 @@
-<% if session[:user_id] %>
+
+<% if session[:user_id] && session[:isProfessional] %>
+
+
+<header class="bg-transparent text-white p-4 flex justify-between items-center absolute top-0 left-0 w-full z-10">
+  <div class="text-xl font-bold flex items-center">
+    <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
+    <h1 class="text-3xl">Physicians and Mentors (Test Build)(Admin View)</h1>
+  </div>
+
+  <div class="flex justify-center text-white">
+   <%= button_to "Log Out", logout_path, method: :delete, class: "btn hover:text-gray-300 text-lg bg-transparent text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-white rounded" %>
+  </div>
+ 
+</header>
+
+  <div class="relative w-screen h-screen bg-cover bg-center bg-fixed bg-black" style=";">
+  <!-- Blue overlay with blur -->
+  <div class="absolute w-max-screen h-screen pt-32"></div>
+  <img src="/images/background02.jpeg" alt="Physicians and Mentors Home Image" class="absolute w-screen h-screen object-cover blur-lg opacity-70" />
+
+  <!-- Centered content -->
+  <div class="relative flex items-center justify-center h-full flex-col">
+    <h1 class="text-4xl md:text-6xl text-white font-bold mt-[32px]">
+      Physicians and Mentors
+    </h1>
+    <p class="text-2xl md:text-4xl text-white font-light pb-[32px]">
+
+      Welcome Back, (Admin) <%= session[:first_name] %> <%= session[:last_name] %> !
+    </p>
+
+    <nav>
+     <%= link_to "View Users", users_path, class: "hover:text-gray-300 text-lg bg-transparent  text-white font-semibold hover:text-white p-4 text-3xl border border-white rounded" %>
+    </nav>
+  </div>
+
+
+  <div class="absolute bottom-0 w-full text-center pb-4">
+  <p class="text-white text-lg">
+    A <a href="https://www.slinghealthtamu.org/" class="underline">Sling Health TAMU</a> Application
+  </p>
+  </div>
+</div>
+
+
+<% elsif session[:user_id] %>
   
 <header class="bg-transparent text-white p-4 flex justify-between items-center absolute top-0 left-0 w-full z-10">
   <div class="text-xl font-bold flex items-center">
@@ -23,7 +68,8 @@
       Physicians and Mentors
     </h1>
     <p class="text-2xl md:text-4xl text-white font-light">
-      A community of students connecing with professionals
+
+      Welcome back!
     </p>
   </div>
 
@@ -36,7 +82,6 @@
 </div>
 
 
-</div>
 <% else %>
 
 <header class="bg-transparent text-white p-4 flex justify-between items-center absolute top-0 left-0 w-full z-10">
@@ -63,7 +108,7 @@
       Physicians and Mentors
     </h1>
     <p class="text-2xl md:text-4xl text-white font-light">
-      A community of students connecing with professionals
+      A community of students connecting with professionals
     </p>
   </div>
 
