--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,7 +5,7 @@
 <header class="bg-transparent text-white p-4 flex justify-between items-center absolute top-0 left-0 w-full z-10">
   <div class="text-xl font-bold flex items-center">
     <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-    <h1 class="text-3xl">Physicians and Mentors (Test Build)(Admin View)</h1>
+    <h1 class="text-3xl">Physicians and Mentors (Admin View)</h1>
   </div>
 
   <div class="flex justify-center text-white">
@@ -48,7 +48,7 @@
 <header class="bg-transparent text-white p-4 flex justify-between items-center absolute top-0 left-0 w-full z-10">
   <div class="text-xl font-bold flex items-center">
     <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-    <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
+    <h1 class="text-3xl">Physicians and Mentors </h1>
   </div>
 
   <div class="flex justify-center text-white">
@@ -87,7 +87,7 @@
 <header class="bg-transparent text-white p-4 flex justify-between items-center absolute top-0 left-0 w-full z-10">
   <div class="text-xl font-bold flex items-center">
   <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
-    <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
+    <h1 class="text-3xl">Physicians and Mentors </h1>
   </div>
 
   <nav>
