--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -42,7 +42,7 @@
           
           <%# <td><%= link_to 'Show', user %></td> %>
           <td><%= link_to 'Edit', edit_user_path(user) %></td>
-          <%# <td><%= link_to 'Destroy', confirm_destroy_user_path(user) %></td> %>
+          <td><%= link_to 'Destroy', confirm_destroy_user_path(user) %></td>
 
         </tr>
       <% end %>
