--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -55,7 +55,7 @@
   <%# TODO: Change isProfessional to is_professional when database is modified %>
   <div class="field">
     <%= form.label :isProfessional %>
-    <%= form.text_field :isProfessional%>
+    <%= form.check_box :isProfessional%>
   </div>
 
 
