--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,24 +1,20 @@
 <h1>New Post</h1>
 
-<%= form_with model: @post, url: posts_path, local: true do |form| %>
+<%= form_with(model: @post, local: true) do |f| %>
   <div>
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= f.label :title %>
+    <%= f.text_field :title, required: true %>
   </div>
 
   <div>
-    <%= form.label :content %>
-    <%= form.text_area :content %>
+    <%= f.label :content %>
+    <%= f.text_area :content, required: true %>
   </div>
 
   <div>
-    <%= form.label :sending_user_id, "User ID" %>
-    <%= form.number_field :sending_user_id %>
-  </div>
-
-  <div>
-    <%= form.submit "Create Post" %>
+    <%= f.submit "Create Post" %>
   </div>
 <% end %>
+
 
 <%= link_to "Back to Posts", posts_path %>
