--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,20 +1,34 @@
 <h1>New Post</h1>
 
-<%= form_with(model: @post, local: true) do |f| %>
+<%= form_with model: @post, local: true do |form| %>
   <div>
-    <%= f.label :title %>
-    <%= f.text_field :title, required: true %>
+    <%= form.label :title %>
+    <%= form.text_field :title %>
   </div>
 
   <div>
-    <%= f.label :content %>
-    <%= f.text_area :content, required: true %>
+    <%= form.label :content %>
+    <%= form.text_area :content %>
   </div>
 
   <div>
-    <%= f.submit "Create Post" %>
+    <h3>Select Specialties:</h3>
+    <% if @specialties.present? %>
+      <% @specialties.each do |specialty| %>
+        <div>
+          <%= check_box_tag "post[specialty_ids][]", specialty.id, @post.specialty_ids.include?(specialty.id) %>
+          <%= label_tag "post_specialty_#{specialty.id}", specialty.name %>
+        </div>
+      <% end %>
+    <% else %>
+      <p>No specialties available.</p>
+    <% end %>
+  </div>
+
+  <div>
+    <%= form.submit "Create Post" %>
   </div>
 <% end %>
 
-
 <%= link_to "Back to Posts", posts_path %>
+
