--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
       <li>
         <h2><%= link_to post.title, post_path(post) %></h2>
         <p><%= post.content.truncate(100) %></p> <!-- Show preview of content -->
-        <p><strong>Posted by:</strong> <%= post.sending_user.name %></p>
+        <p><strong>Posted by:</strong> <%= post.sending_user.full_name %></p>
         <p><small>Posted on: <%= post.created_at.strftime("%B %d, %Y %I:%M %p") %></small></p>
 
         <h3>Specialties:</h3>
