--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,17 @@
 <h1>New Post</h1>
 
+<% if @post.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+    <ul>
+      <% @post.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
+
 <%= form_with model: @post, local: true do |form| %>
   <div>
     <%= form.label :title %>
@@ -31,4 +43,3 @@
 <% end %>
 
 <%= link_to "Back to Posts", posts_path %>
-
