--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,55 +1,64 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<%= stylesheet_link_tag 'users', media: 'all', data: { turbolinks: false } %>
 
-<p id="notice"><%= notice %></p>
+<img src="/images/background02.jpeg" alt="Physicians and Mentors Home Image" class="absolute w-screen h-screen object-cover blur-lg brightness-30 z-[-1] pointer-events-none" />
 
-<form action="/users" method="GET">
-  <input type="text" name="search_name" >
-  <input type="submit" value="Search for Users by First Name">
-</form>
+<div class="text-white">
 
-<table>
-  <thead>
-    <tr>
-      <th>First name</th>
-      <th>Last name</th>
-      <th>Email</th>
-      <th>Birthday</th>
-      <th>Phone number</th>
-      <th>Profile image url</th>
-      <th>Is professional</th>
+  <h1>All Users</h1>
+  <p>Find me in app/views/users/index.html.erb</p>
 
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <p id="notice"><%= notice %></p>
 
-  <tbody>
+  <form action="/users" method="GET">
+    <input type="text" name="search_name" >
+    <input type="submit" value="Search for Users by First Name">
+  </form>
 
-    <% if @users.nil? %>
-    <tr>
-      <td colspan="2">No users found.</td>
-    </tr>
-    <% else %>
-      <% @users.each do |user| %>
+  <div class="flex justify-center">
+    <table class="table-auto">
+      <thead>
         <tr>
-          <td><%= user.first_name %></td>
-          <td><%= user.last_name %></td>
-          <td><%= user.email %></td>
-          <td><%= user.DOB %></td>
-          <td><%= user.phone_number %></td>
-          <td><%= user.profile_image_url %></td>
-          <td><%= user.isProfessional %></td>
-          
-          <td><%= link_to 'Show', user %></td>
-          <td><%= link_to 'Edit', edit_user_path(user) %></td>
-          <td><%= link_to 'Destroy', confirm_destroy_user_path(user) %></td>
+          <th>First name</th>
+          <th>Last name</th>
+          <th>Email</th>
+          <th>Birthday</th>
+          <th>Phone number</th>
+          <th>Profile image url</th>
+          <th>Is professional</th>
 
+          <th colspan="3">Actions</th>
         </tr>
-      <% end %>
-    <% end %>
-  </tbody>
-</table>
+      </thead>
 
-<br>
+      <tbody>
 
-<%= link_to 'New User', new_user_path %>
+        <% if @users.nil? %>
+        <tr>
+          <td colspan="2">No users found.</td>
+        </tr>
+        <% else %>
+          <% @users.each do |user| %>
+            <tr>
+              <td><%= user.first_name %></td>
+              <td><%= user.last_name %></td>
+              <td><%= user.email %></td>
+              <td><%= user.DOB %></td>
+              <td><%= user.phone_number %></td>
+              <td><%= user.profile_image_url %></td>
+              <td><%= user.isProfessional %></td>
+              
+              <td class="action-button"><%= link_to 'Show', user %></td>
+              <td class="action-button"><%= link_to 'Edit', edit_user_path(user) %></td>
+              <td class="action-button"><%= link_to 'Destroy', confirm_destroy_user_path(user) %></td>
+
+            </tr>
+          <% end %>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
+  <br>
+
+  <%= link_to 'New User', new_user_path %>
+</div>
