--- a/app/views/professionals/_professional.html.erb
+++ b/app/views/professionals/_professional.html.erb
@@ -12,8 +12,8 @@
     <%= professional.email %>
   </p>
   <p class="my-5">
-    <strong class="block font-medium mb-1">Password digest:</strong>
-    <%= professional.password_digest %>
+    <strong class="block font-medium mb-1">Password:</strong>
+    <%= professional.password %>
   </p>
   <p class="my-5">
     <strong class="block font-medium mb-1">Dob:</strong>
