--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,16 +15,16 @@
   </form>
 
   <div class="flex justify-center">
-    <table class="table-auto">
+    <table id="users-table" class="table-auto">
       <thead>
         <tr>
-          <th>First name</th>
-          <th>Last name</th>
-          <th>Email</th>
-          <th>Birthday</th>
-          <th>Phone number</th>
-          <th>Profile image url</th>
-          <th>Is professional</th>
+          <th onclick="sortTable(0)">First name</th>
+          <th onclick="sortTable(1)">Last name</th>
+          <th onclick="sortTable(2)">Email</th>
+          <th onclick="sortTable(3)">Birthday</th>
+          <th onclick="sortTable(4)">Phone number</th>
+          <th onclick="sortTable(5)">Profile image url</th>
+          <th onclick="sortTable(6)">Is professional</th>
 
           <th colspan="3">Actions</th>
         </tr>
@@ -62,3 +62,62 @@
 
   <%= link_to 'New User', new_user_path %>
 </div>
+
+<%# Sort table by clicking headers %>
+<%# https://www.w3schools.com/howto/howto_js_sort_table.asp %>
+<script>
+function sortTable(n) {
+  var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+  table = document.getElementById("users-table");
+  switching = true;
+  // Set the sorting direction to ascending:
+  dir = "asc";
+  /* Make a loop that will continue until
+  no switching has been done: */
+  while (switching) {
+    // Start by saying: no switching is done:
+    switching = false;
+    rows = table.rows;
+    /* Loop through all table rows (except the
+    first, which contains table headers): */
+    for (i = 1; i < (rows.length - 1); i++) {
+      // Start by saying there should be no switching:
+      shouldSwitch = false;
+      /* Get the two elements you want to compare,
+      one from current row and one from the next: */
+      x = rows[i].getElementsByTagName("TD")[n];
+      y = rows[i + 1].getElementsByTagName("TD")[n];
+      /* Check if the two rows should switch place,
+      based on the direction, asc or desc: */
+      if (dir == "asc") {
+        if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+          // If so, mark as a switch and break the loop:
+          shouldSwitch = true;
+          break;
+        }
+      } else if (dir == "desc") {
+        if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+          // If so, mark as a switch and break the loop:
+          shouldSwitch = true;
+          break;
+        }
+      }
+    }
+    if (shouldSwitch) {
+      /* If a switch has been marked, make the switch
+      and mark that a switch has been done: */
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+      // Each time a switch is done, increase this count by 1:
+      switchcount ++;
+    } else {
+      /* If no switching has been done AND the direction is "asc",
+      set the direction to "desc" and run the while loop again. */
+      if (switchcount == 0 && dir == "asc") {
+        dir = "desc";
+        switching = true;
+      }
+    }
+  }
+}
+</script>
