--- a/app/views/professionals/_form.html.erb
+++ b/app/views/professionals/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @professional, url: professionals_path, method: :post, local: true, class: "contents") do |form| %>
+<%= form_with(model: @professional, url: professionals_path(@professional), method: :patch, local: true, class: "contents") do |form| %>
   <% if @professional.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-md mt-3">
       <h2><%= pluralize(@professional.errors.count, "error") %> prohibited this user from being saved:</h2>
