Alter ordering of profile picture on all users table

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -12,9 +12,9 @@ th {
   color: white;
 }
 
-/* Striped table rows */
-tr:nth-child(even) {
-  background-color: #f2f2f255;
+/* Profile td has less padding */
+.profile-td {
+  padding: 5px
 }
 
 /* tr:hover {
