--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,16 +15,16 @@
   </form>
 
   <div class="flex justify-center">
-    <table id="users-table" class="table-auto">
+    <table id="users-table" class="w-80/100">
       <thead>
         <tr>
-          <th onclick="sortTable(0)">First name</th>
-          <th onclick="sortTable(1)">Last name</th>
+          <th onclick="sortTable(0)" class="w-5/100"></th>
+          <th onclick="sortTable(0)" class="w-20/100">First name</th>
+          <th onclick="sortTable(1)" class="w-20/100">Last name</th>
           <th onclick="sortTable(2)">Email</th>
           <th onclick="sortTable(3)">Birthday</th>
-          <th onclick="sortTable(4)">Phone number</th>
-          <th onclick="sortTable(5)">Profile image url</th>
-          <th onclick="sortTable(6)">Is professional</th>
+          <th onclick="sortTable(4)">Phone</th>
+          <th onclick="sortTable(5)">Professional</th>
 
           <th colspan="3">Actions</th>
         </tr>
@@ -39,12 +39,12 @@
         <% else %>
           <% @users.each do |user| %>
             <tr>
+              <td class="profile-td"><%= image_tag(user.profile_image_url, alt: "Profile image", class: "w-full h-full object-cover aspect-square rounded-md") %></td>
               <td><%= user.first_name %></td>
               <td><%= user.last_name %></td>
               <td><%= user.email %></td>
               <td><%= user.DOB %></td>
               <td><%= user.phone_number %></td>
-              <td><%= image_tag(user.profile_image_url, alt: "Profile image", class: "w-10 h-10 rounded-md") %></td>
               <td><%= user.isProfessional %></td>
               <td class="action-button"><%= link_to 'Show', user %></td>
               <td class="action-button"><%= link_to 'Edit', edit_user_path(user) %></td>
