--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -2,13 +2,12 @@
 th,td {
   padding: 15px;
   text-align: left;
-  border-bottom: 1px solid #ddd;
-  backdrop-filter: blur(10px);
+  background-color: #544a57;
 }
 
 /* Table header */
 th {
-  background-color: #724099aa;
+  border-bottom: 1px solid #ddd;
   color: white;
 }
 
