--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,17 +15,17 @@
   </form>
 
   <div class="flex justify-center">
-    <div class="w-80/100 pl-3 pr-3 bg-[#544a57] rounded-md">
+    <div class="w-80/100 bg-[#544a57] rounded-md">
       <table id="users-table" class="w-full">
         <thead>
           <tr>
             <th onclick="sortTable(0)" class="w-5/100"></th>
-            <th onclick="sortTable(0)" class="w-20/100">First name</th>
-            <th onclick="sortTable(1)" class="w-20/100">Last name</th>
-            <th onclick="sortTable(2)">Email</th>
-            <th onclick="sortTable(3)">Birthday</th>
-            <th onclick="sortTable(4)">Phone</th>
-            <th onclick="sortTable(5)">Professional</th>
+            <th onclick="sortTable(0)" class="sortable-header w-20/100">First name</th>
+            <th onclick="sortTable(1)" class="sortable-header w-20/100">Last name</th>
+            <th onclick="sortTable(2)" class="sortable-header">Email</th>
+            <th onclick="sortTable(3)" class="sortable-header">Birthday</th>
+            <th onclick="sortTable(4)" class="sortable-header">Phone</th>
+            <th onclick="sortTable(5)" class="sortable-header">Professional</th>
 
             <th colspan="3">Actions</th>
           </tr>
@@ -39,7 +39,7 @@
           </tr>
           <% else %>
             <% @users.each do |user| %>
-              <tr>
+              <tr class="users-table-rows">
                 <td class="profile-td"><%= image_tag(user.profile_image_url, alt: "Profile image", class: "w-full h-full object-cover aspect-square rounded-md") %></td>
                 <td><%= user.first_name %></td>
                 <td><%= user.last_name %></td>
@@ -47,9 +47,9 @@
                 <td><%= user.DOB %></td>
                 <td><%= user.phone_number %></td>
                 <td><%= user.isProfessional %></td>
-                <td class="action-button"><%= link_to 'Show', user %></td>
-                <td class="action-button"><%= link_to 'Edit', edit_user_path(user) %></td>
-                <td class="action-button"><%= link_to 'Destroy', confirm_destroy_user_path(user) %></td>
+                <td><%= link_to 'Show', user, class: "blue-button p-2 rounded-md" %></td>
+                <td><%= link_to 'Edit', edit_user_path(user), class: "blue-button p-2 rounded-md " %></td>
+                <td><%= link_to 'Destroy', confirm_destroy_user_path(user), class: "red-button p-2 rounded-md " %></td>
 
               </tr>
             <% end %>
