--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
     <input type="submit" value="Search for Users by First Name">
   </form>
 
-  <div class="flex justify-center">
+  <div class="flex flex-col items-center justify-center">
     <div class="w-80/100 bg-[#544a57] rounded-md">
       <table id="users-table" class="w-full">
         <thead>
@@ -48,20 +48,19 @@
                 <td><%= user.phone_number %></td>
                 <td><%= user.isProfessional %></td>
                 <td><%= link_to 'Show', user, class: "blue-button p-2 rounded-md" %></td>
-                <td><%= link_to 'Edit', edit_user_path(user), class: "blue-button p-2 rounded-md " %></td>
+                <td><%= link_to 'Edit', edit_user_path(user), class: "blue-button p-2 rounded-md" %></td>
                 <td><%= link_to 'Destroy', confirm_destroy_user_path(user), class: "red-button p-2 rounded-md " %></td>
-
               </tr>
             <% end %>
           <% end %>
         </tbody>
       </table>
     </div>
+    
+    <%= link_to 'New User', new_user_path, class: "blue-button p-4 m-4 rounded-md bg-[#544a57]" %>
   </div>
 
-  <br>
-
-  <%= link_to 'New User', new_user_path %>
+  <br>  
 </div>
 
 <%# Sort table by clicking headers %>
