--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,10 +9,19 @@
 
   <p id="notice"><%= notice %></p>
 
-  <form action="/users" method="GET">
-    <input type="text" name="search_name" >
-    <input type="submit" value="Search for Users by First Name">
-  </form>
+  <div class="flex flex-row justify-between m-4 w-80/100 mx-auto">
+    <div class="flex flex-col">
+      <p class="mb-2">Search for users by first name:</p>
+      <div>
+        <form action="/users" method="GET">
+          <input type="text" name="search_name" class="p-2 rounded-sm bg-[#544a57]">
+          <input type="submit" value="Search" class="p-2 rounded-sm bg-[#736493] blue-button">
+        </form>
+      </div>
+    </div>
+
+    <%= link_to 'New User', new_user_path, class: "flex items-center justify-center blue-button p-2 w-10/100 rounded-md bg-[#544a57]" %>
+  </div>
 
   <div class="flex flex-col items-center justify-center">
     <div class="w-80/100 bg-[#544a57] rounded-md">
