--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'users', media: 'all', data: { turbolinks: false } %>
 
-<img src="/images/background02.jpeg" alt="Physicians and Mentors Home Image" class="absolute w-screen h-screen object-cover blur-lg brightness-30 z-[-1] pointer-events-none" />
+<img src="/images/background02.jpeg" alt="Physicians and Mentors Home Image" class="fixed absolute w-screen h-screen object-cover brightness-20 z-[-1] pointer-events-none bg-[#201c21]" />
 
 <div class="text-white">
 
