--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,6 +20,7 @@
         <form action="/users" method="GET">
           <input type="text" name="search_name" class="p-2 rounded-sm bg-[#544a57]">
           <input type="submit" value="Search" class="p-2 rounded-sm bg-[#736493] blue-button">
+          <%= link_to 'Reset', users_path, class: "p-2 rounded-sm bg-[#966179] red-button" %>
         </form>
       </div>
     </div>
