--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  @import "tailwindcss/base";
  @import "tailwindcss/components";
  @import "tailwindcss/utilities";
+
+:root {
+  --primary-color: #714098;
+  --secondary-color: #e0e549;  /* complement primary color */
+  --accent-color: #d878cb;
+  --surface-color: #544a57;
+  --text-color: #ffffff;
+
+  --ok-highlight-color: #7883d8;
+  --ok-highlight-faded-color: #736493;  /* midpoint between surface and ok-highlight */
+  --warn-highlight-color: #d87878;
+  --warn-highlight-faded-color: #966179;  /* midpoint between surface and warn-highlight */
+}
