Use variable colors instead of magic numbers in all users table

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,7 @@
   --accent-color: #d878cb;
   --surface-color: #544a57;
   --text-color: #ffffff;
+  --background-color: #201c21;
 
   --ok-highlight-color: #7883d8;
   --ok-highlight-faded-color: #736493;  /* midpoint between surface and ok-highlight */
