--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,3 +27,13 @@
   --warn-highlight-color: #d87878;
   --warn-highlight-faded-color: #966179;  /* midpoint between surface and warn-highlight */
 }
+
+#header {
+  height: 100px;
+  transition: background-color 0.3s, height 0.3s;
+}
+
+#header.shrink {
+  height: 60px;
+  background-color: var(--background-color);
+}
