--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,8 @@
+<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
 <% if session[:user_id] && session[:isProfessional] %>
 
-  <header class="text-white p-4 flex justify-between items-center sticky top-0 left-0 w-full z-10 bg-[var(--surface-color)]">
+  <header id="header" class="text-white p-4 flex justify-between items-center sticky top-0 left-0 w-full z-10 bg-transparent transition-all duration-300">
     <div class="text-xl font-bold flex items-center">
       <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
       <h1 class="text-3xl">Physicians and Mentors (Test Build)(Admin View)</h1>
@@ -13,7 +15,7 @@
   
 <% elsif session[:user_id] %>
 
-  <header class="text-white p-4 flex justify-between items-center sticky top-0 left-0 w-full z-10 bg-[var(--surface-color)]>
+  <header id="header" class="text-white p-4 flex justify-between items-center sticky top-0 left-0 w-full z-10 bg-transparent transition-all duration-300">
     <div class="text-xl font-bold flex items-center">
       <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
       <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
@@ -27,7 +29,7 @@
 
 <% else %>
 
-  <header class="text-white p-4 flex justify-between items-center sticky top-0 left-0 w-full z-10 bg-[var(--surface-color)]">
+  <header id="header" class="text-white p-4 flex justify-between items-center sticky top-0 left-0 w-full z-10 bg-transparent transition-all duration-300">
     <div class="text-xl font-bold flex items-center">
     <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
       <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
@@ -41,3 +43,17 @@
   </header>
 
 <% end %>
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const header = document.querySelector('#header');
+    
+    window.addEventListener('scroll', function() {
+      if (window.scrollY > 50) {  // Scroll threshold
+        header.classList.add('shrink');
+      } else {
+        header.classList.remove('shrink');
+      }
+    });
+  });
+</script>
