--- a/app/views/professionals/_form.html.erb
+++ b/app/views/professionals/_form.html.erb
@@ -10,6 +10,8 @@
     </div>
   <% end %>
 
+  <p>Form is rendering</p>
+
   <div class="my-5">
     <%= form.label :last_name %>
     <%= form.text_field :last_name, class: "block shadow-sm rounded-md border px-3 py-2 mt-2 w-full #{'border-red-400' if @professional.errors[:last_name].any?}" %>
@@ -55,7 +57,12 @@
     <%= form.label :isProfessional, "Sign up as a Professional" %>
   </div>
 
-  <div class="inline">
-    <%= form.submit "Create Account", class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white font-medium cursor-pointer" %>
+  <div class="my-5">
+    <%= form.label :specialty_ids, "Specialties" %>
+    <%= form.collection_select :specialty_ids, Specialty.all, :id, :name, {}, { multiple: true, class: "block shadow-sm rounded-md border px-3 py-2 mt-2 w-full" } %>
   </div>
+
+
+  <%= form.submit "Create Account", class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-black font-medium cursor-pointer" %>
+
 <% end %>
