Default text color is white on all pages.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body class="text-white">
     <img src="/images/background02.jpeg" alt="Physicians and Mentors Home Image" class="fixed absolute w-screen h-screen object-cover brightness-20 z-[-1] pointer-events-none bg-[var(--background-color)]" />
     
     <%= render 'layouts/header' %> <!-- Include the header partial -->
