--- a/app/views/users/confirm_destroy.html.erb
+++ b/app/views/users/confirm_destroy.html.erb
@@ -1,7 +1,11 @@
 <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= stylesheet_link_tag 'users', media: 'all', data: { turbolinks: false } %>
 
-<p id="notice"><%= notice %></p>
+<% if notice.present? %>
+  <div class="flex flex-col items-center justify-center rounded-lg p-10 m-10 w-80/100 mx-auto bg-[var(--accent-color)]">
+    <h1 id="notice"><%= notice %></p>
+  </div>
+<% end %>
 
 <div class="flex flex-col items-center justify-center">
   <h1 class="text-2xl m-auto font-bold p-4">Are you sure you want to destroy this user?</h1>
