--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,9 +8,9 @@
   <p>Find me in app/views/users/index.html.erb</p>
 
   <% if notice.present? %>
-  <div class="flex items-center justify-center rounded-lg p-10 m-10 w-80/100 mx-auto bg-[var(--accent-color)]">
-    <h1 id="notice"><%= notice %></p>
-  </div>
+    <div class="flex flex-col items-center justify-center rounded-lg p-10 m-10 w-80/100 mx-auto bg-[var(--accent-color)]">
+      <h1 id="notice"><%= notice %></p>
+    </div>
   <% end %>
 
   <div class="flex flex-row justify-between m-4 w-80/100 mx-auto">
