Renamed back button to cancel

--- a/app/views/users/confirm_destroy.html.erb
+++ b/app/views/users/confirm_destroy.html.erb
@@ -72,7 +72,7 @@
 
   <div class="flex flex-row items-center justify-center">
     <%= link_to 'Edit', edit_user_path(@user), class: "blue-button p-4 m-4 rounded-md bg-[var(--surface-color)]" %>
-    <%= link_to 'Back', users_path, class: "blue-button p-4 m-4 rounded-md bg-[var(--surface-color)]" %>
+    <%= link_to 'Cancel', users_path, class: "blue-button p-4 m-4 rounded-md bg-[var(--surface-color)]" %>
   </div>
 </div>
 
