--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,5 +8,5 @@
 <%= render 'form', user: @user %>
 
 <div class="flex flex-col items-center justify-center">
-  <%= link_to 'Back', users_path, class: "blue-button p-4 mb-4 rounded-md bg-[var(--surface-color)]" %>
+  <%= link_to 'Cancel', users_path, class: "blue-button p-4 mb-4 rounded-md bg-[var(--surface-color)]" %>
 </div>
