Added help page routes on footer

--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -39,3 +39,5 @@
     You can manually type in a user’s first name and similar results will appear. For example, if you fill out “Kyl”, users with the names “Kyle”, “Kylie”, and “Kyla” will appear. You can also filter them based on whether they are professionals or not. First you click “Pick a Filter Option” then select “Filter by Professional” then you can select whether you want to filter by “Professional” or “Not professional”. In the future, a specialization filter will be added for professionals.
   </p>
 </div>
+
+<%= link_to 'Home', home_path %>
