--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,23 @@
 
 <% if session[:user_id] && session[:isProfessional] %>
 
-  <div class="relative w-screen h-screen bg-cover bg-center bg-fixed" style=";">
+
+<header class="bg-transparent text-white p-4 flex justify-between items-center absolute top-0 left-0 w-full z-10">
+  <div class="text-xl font-bold flex items-center">
+    <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
+    <h1 class="text-3xl">Physicians and Mentors (Test Build)(Admin View)</h1>
+  </div>
+
+  <div class="flex justify-center text-white">
+   <%= button_to "Log Out", logout_path, method: :delete, class: "btn hover:text-gray-300 text-lg bg-transparent text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-white rounded" %>
+  </div>
+ 
+</header>
+
+  <div class="relative w-screen h-screen bg-cover bg-center bg-fixed bg-black" style=";">
   <!-- Blue overlay with blur -->
   <div class="absolute w-max-screen h-screen pt-32"></div>
+  <img src="/images/background02.jpeg" alt="Physicians and Mentors Home Image" class="absolute w-screen h-screen object-cover blur-lg opacity-70" />
 
   <!-- Centered content -->
   <div class="relative flex items-center justify-center h-full flex-col">
@@ -21,15 +35,32 @@
   </div>
 
 
+  <div class="absolute bottom-0 w-full text-center pb-4">
+  <p class="text-white text-lg">
+    A <a href="https://www.slinghealthtamu.org/" class="underline">Sling Health TAMU</a> Application
+  </p>
+  </div>
 </div>
 
 
 <% elsif session[:user_id] %>
+  
+<header class="bg-transparent text-white p-4 flex justify-between items-center absolute top-0 left-0 w-full z-10">
+  <div class="text-xl font-bold flex items-center">
+    <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
+    <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
+  </div>
 
+  <div class="flex justify-center text-white">
+   <%= button_to "Log Out", logout_path, method: :delete, class: "btn hover:text-gray-300 text-lg bg-transparent text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-white rounded" %>
+  </div>
+ 
+</header>
 
-  <div class="relative w-screen h-screen bg-cover bg-center bg-fixed" style=";">
+  <div class="relative w-screen h-screen bg-cover bg-center bg-fixed bg-black" style=";">
   <!-- Blue overlay with blur -->
   <div class="absolute w-max-screen h-screen pt-32"></div>
+  <img src="/images/background02.jpeg" alt="Physicians and Mentors Home Image" class="absolute w-screen h-screen object-cover blur-lg opacity-70" />
 
   <!-- Centered content -->
   <div class="relative flex items-center justify-center h-full flex-col">
@@ -42,14 +73,34 @@
     </p>
   </div>
 
+
+  <div class="absolute bottom-0 w-full text-center pb-4">
+  <p class="text-white text-lg">
+    A <a href="https://www.slinghealthtamu.org/" class="underline">Sling Health TAMU</a> Application
+  </p>
+  </div>
 </div>
 
 
 <% else %>
 
-  <div class="relative w-screen h-screen bg-cover bg-center bg-fixed" style=";">
+<header class="bg-transparent text-white p-4 flex justify-between items-center absolute top-0 left-0 w-full z-10">
+  <div class="text-xl font-bold flex items-center">
+  <img src="/images/logo-1.png" alt="Physicians and Mentors Logo" class="w-16 h-16 mr-4" />
+    <h1 class="text-3xl">Physicians and Mentors (Test Build)</h1>
+  </div>
+
+  <nav>
+    <%= link_to "Home", home_path, class: "hover:text-gray-300 text-lg bg-transparent  text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-white-900 rounded" %>
+    <%= link_to "Login", login_path, class: "hover:text-gray-300 text-lg bg-transparent  text-white-900 font-semibold hover:text-white mt-8 p-4 text-3xl border border-gray-500 rounded" %>
+  </nav>
+ 
+</header>
+
+  <div class="relative w-screen h-screen bg-cover bg-center bg-fixed bg-black" style=";">
   <!-- Blue overlay with blur -->
   <div class="absolute w-max-screen h-screen pt-32"></div>
+  <img src="/images/background02.jpeg" alt="Physicians and Mentors Home Image" class="absolute w-screen h-screen object-cover blur-lg opacity-70" />
 
   <!-- Centered content -->
   <div class="relative flex items-center justify-center h-full flex-col">
@@ -62,6 +113,11 @@
   </div>
 
 
+  <div class="absolute bottom-0 w-full text-center pb-4">
+  <p class="text-white text-lg">
+    A <a href="https://www.slinghealthtamu.org/" class="underline">Sling Health TAMU</a> Application
+  </p>
+  </div>
 </div>
 
 
